# MajorTraining

./: .gitignore  LICENSE  MajorTraining.cabal  README-en.md  README.md  exercises.csv  major.cabal
.github/workflows/: tests.yml
src/: Generation.hs  Main.hs  Model.hs  dune  exercise.ml  generation.ml  main.ml  major.ml  model.ml
src/lib/: Generation.hs  Model.hs  Options.hs  TUI.hs
src/lib/TUI/: AppState.hs  Core.hs  Events.hs  Rendering.hs
tests/: GenerationSpec.hs  ModelSpec.hs  Tests.hs
tests/test-cases/: TestGeneration.hs  TestModel.hs
