cabal-version:       >= 1.10
name:                MajorTraining
version:             0.1.0.0
synopsis:            Circuit training generator
-- description:
bug-reports:         https://github.com/TheLusitanianKing/MajorTraining/issues
license:             MIT
license-file:        LICENSE
author:              TheLusitanianKing
maintainer:          alexlusitanian@gmail.com
copyright:           Alexandre Pais Gomes
build-type:          Simple
extra-source-files:  README.md

executable major-training
  main-is: Main.hs
  build-depends:
    base >= 4.15,
    random >= 1.2.0,
    major-training-lib
  ghc-options: -Wall
  default-language: Haskell2010

library major-training-lib
  exposed-modules:
    Generation,
    Model
  hs-source-dirs:
    src
  build-depends:
    base >= 4.15,
    random >= 1.2.0,
    text >= 1.2.5
  ghc-options: -Wall
  default-language: Haskell2010