cabal-version:      >= 1.10
name:               major
version:            0.1.0.0
synopsis:           Circuit training generator
bug-reports:        https://github.com/TheLusitanianKing/MajorTraining/issues
license:            MIT
license-file:       LICENSE
author:             TheLusitanianKing
maintainer:         alexlusitanian@gmail.com
copyright:          Alexandre Pais Gomes
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:
    Generation,
    Model,
    TUI
  other-modules:
    Paths_major
  hs-source-dirs: src/lib
  build-depends:
    base >= 4.15,
    brick >= 0.67,
    containers >= 0.6.4,
    random >= 1.2.0,
    text >= 1.2.5,
    vty >= 5.33
  ghc-options: -Wall
  default-language: Haskell2010

executable major
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base >= 4.15,
    brick >= 0.67,
    random >= 1.2.0,
    text >= 1.2.5,
    vty >= 5.33,
    major
  other-modules:
    Paths_major
  ghc-options: -threaded -Wall
  default-language: Haskell2010

test-suite major-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    tests
  other-modules:
    GenerationSpec
    ModelSpec
    Paths_major
  build-depends:
    base >= 4.15,
    containers >= 0.6.4,
    QuickCheck >= 2.14.2,
    hspec >= 2.7.4,
    hspec-discover >= 2.9.4,
    HUnit >= 1.6.2,
    random >= 1.2.0,
    major
  ghc-options: -Wall
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover >= 2.9.4